# LZ78

./: .travis.yml  LICENSE.txt  README.md  build.gradle  dumpFile.txt  lzhash  travis_ci.sh
src/main/C/: Makefile  lz78  lz78.c  lz78.h
src/main/C++/: CMakeLists.txt  lz78.cc  main.cpp
src/main/C++/libs/: Node.h  Trie.h
src/main/cpp/: Bit_encode.cc  Bit_encode.h  Byte.h  CMakeLists.txt  LZPair.cc  LZPair.h  Token.cc  Token.h  lz78.cc
src/main/cpp/libs/: Node.h
src/main/java/futil/compression/: BitBufferInput.java  BitBufferOutput.java  BitDecoder.java  BitEncoder.java  Byject.java  InvalidHeaderException.java  LZ78.java  LZ78Hash.java  StringPos.java  Token.java
src/main/java/futil/compression/texts/: test5-in.txt
